kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
  namespace: moreillon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
  namespace: moreillon
spec:
  type: NodePort
  selector:
    app: ${APPLICATION_NAME}
  ports:
    - port: 80
      nodePort: ${K8S_NODEPORT_PORT}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
spec:
  rules:
    - host: whereabouts-api.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPLICATION_NAME}
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - whereabouts-api.jtektrnd.net
  rules:
    - backendRefs:
        - name: ${APPLICATION_NAME}
          port: 80
